// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdaptivePanel should render no items provided 1`] = `
<div
  className="mainWrapper"
>
  <div
    className="itemsWrapper"
    style={
      Object {
        "columnGap": undefined,
      }
    }
  />
</div>
`;

exports[`AdaptivePanel should render some items 1`] = `
<div
  className="mainWrapper"
>
  <div
    className="itemsWrapper"
    style={
      Object {
        "columnGap": undefined,
      }
    }
  >
    <div
      data-label="Item snapshot-0"
      data-testid="adaptive-item"
    />
    <div
      data-label="Item snapshot-1"
      data-testid="adaptive-item"
    />
    <div
      data-label="Item snapshot-2"
      data-testid="adaptive-item"
    />
    <div
      data-label="Item snapshot-3"
      data-testid="adaptive-item"
    />
    <div
      data-label="Item snapshot-4"
      data-testid="adaptive-item"
    />
  </div>
</div>
`;

exports[`AdaptivePanel should render some items with itemsGap 1`] = `
<div
  className="mainWrapper"
>
  <div
    className="itemsWrapper"
    style={
      Object {
        "columnGap": 6,
      }
    }
  >
    <div
      data-label="Item snapshot-0"
      data-testid="adaptive-item"
    />
    <div
      data-label="Item snapshot-1"
      data-testid="adaptive-item"
    />
    <div
      data-label="Item snapshot-2"
      data-testid="adaptive-item"
    />
    <div
      data-label="Item snapshot-3"
      data-testid="adaptive-item"
    />
    <div
      data-label="Item snapshot-4"
      data-testid="adaptive-item"
    />
  </div>
</div>
`;
